[Fix] Clear relations parameter when elements are empty
Updated the `setRelations` method to clear the relations parameter if the provided elements collection is empty. This ensures proper handling of empty relations and avoids leaving stale data in the parameter. Adjusted logic to streamline initialization and parameter updates.